# datasync

./: .gitignore  .golangci.yml  .lintr  CONTRIBUTING.md  README.md  ecrin.R  ecrin.go  ecrin.py  go.mod  go.sum  lint.R  pyproject.toml
R/: api_redcap.R  config.R  display.R  download.R  extract_text.R  instruments.R  nlp.R  rapport.R  stats.R
reports/: analyse-globale-admin.qmd
shiny/project-graph/: app.R  run.R
stacks/: admin.yml  chercheurs.yml  public.yml
tasks/: download_files.R  download_instrument.R  extract_biblio.py  extract_files_text.R  fetch_control.R  fetch_metadata.R  generate_qmd.R  nlp_text.R
